--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-pdf": "^2.0.0",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
     "ng-otp-input": "^1.8.1",
+    "ng2-charts": "^2.4.3",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.2",
     "rxjs": "~6.6.0",
